# CodeMXJ

./: README.md  app.py  pyproject.toml  replit.nix
.streamlit/: config.toml
analyzers/: call_graph.py  code_parser.py  db_analyzer.py  demographic_pattern_analyzer.py  demographics_analyzer.py  integration_pattern_analyzer.py  java_class.py  legacy_table_analyzer.py  microservice_analyzer.py  project_analyzer.py  sequence_diagram.py  uml_generator.py
attached_assets/: Pasted--Demographic1-r-b-Additional-Info-Address-City-Address-Country-Address-Postal-Code-Address-State--1740048617543.txt
utils/: helpers.py
