[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "javalang>=0.13.0",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "plantuml-markdown>=3.11.1",
    "plantuml>=0.3.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.1",
    "trafilatura>=2.0.0",
    "twilio>=9.4.5",
    "psycopg2-binary>=2.9.10",
    "openai>=1.63.2",
]
